--- a/CSPI/contact.css
+++ b/CSPI/contact.css
@@ -10,7 +10,7 @@ body::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('/Applications/XAMPP/xamppfiles/htdocs/CSPI/cspi.jpeg'); 
+    background-image: url('cspi.jpeg'); 
     background-size: cover; /* Cover the whole body */
     background-position: center; /* Center the image */
     opacity: 0.1; /* Adjust for desired shadow effect */
@@ -89,7 +89,6 @@ footer .facebook-logo {
     vertical-align: middle; /* Align with text */
     margin-right: 5px; /* Space between logo and text */
 }
-/* base.css or a main CSS file */
 
 html, body {
     height: 100%; /* Ensure full height */
